--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
+
+    <!--Scalability for mobile devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+
     <title>LifeNet</title>
     <script th:inline="javascript">
-        var frontendData = [[${frontendData}]];
+        const frontendData = [[${frontendData}]];
     </script>
 </head>
 <body>
-<h3>LifeNet</h3>
+
 <div id="app"></div>
 <script th:src="${isDevMode} ? 'http://localhost:8000/main.js' : '/js/main.js'"></script>
 </body>
